--- a/index.html
+++ b/index.html
@@ -11,12 +11,40 @@
         <section id="container">
             <!-- <article class="cartao">
                 <div class="cartao__conteudo">
-                    <h3>Programação</h3>
+                    <h3>Neymar</h3>
                     <div class="cartao__conteudo__pergunta">
-                        <p>O que é JavaScript?</p>
+                        <p>Quem é Neymar?</p>
                     </div>
                     <div class="cartao__conteudo__resposta">
-                        <p>O JavaScript é uma linguagem de programação</p>
+                        <p>Neymar é um dos maiores jogadores de futebol do Brasil, com passagens por Santos, Barcelona e PSG. Destaca-se pela habilidade e velocidade, sendo também uma estrela da seleção brasileira.</p>
+                    </div>
+                </div>
+            </article> -->
+        </section>
+    </main>
+    <section id="container">
+            <!-- <article class="cartao">
+                <div class="cartao__conteudo">
+                    <h3>Gols</h3>
+                    <div class="cartao__conteudo__pergunta">
+                        <p>Quantos gols tem Neymar atualmente?</p>
+                    </div>
+                    <div class="cartao__conteudo__resposta">
+                        <p>Ao longo de sua carreira, Neymar já fez 442 gols defendendo as camisas de Santos, Barcelona, PSG, Al Hilal e da seleção brasileira principal.</p>
+                    </div>
+                </div>
+            </article> -->
+        </section>
+    </main>
+    <section id="container">
+            <!-- <article class="cartao">
+                <div class="cartao__conteudo">
+                    <h3>Clubes</h3>
+                    <div class="cartao__conteudo__pergunta">
+                        <p>Por quantos clubes Neymar já atuou?</p>
+                    </div>
+                    <div class="cartao__conteudo__resposta">
+                        <p>Neymar já atuou por um total de 3 clubes: Santos FC, Barcelona, PSG e atualmente ocorreu sua volta para o clube Santos.</p>
                     </div>
                 </div>
             </article> -->
